welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:11: error: not found: value T
	var i = nums.length ; var y=0; T=
                                       ^